[gd_scene load_steps=5 format=2]

[ext_resource path="res://sfx/laser1.ogg" type="AudioStream" id=1]
[ext_resource path="res://sfx/zap1.ogg" type="AudioStream" id=2]
[ext_resource path="res://gfx/UITheme.tres" type="Theme" id=3]
[ext_resource path="res://scenes/LevelInstructions.gd" type="Script" id=4]

[node name="LevelInstructions" type="VBoxContainer"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = 424.0
margin_top = 96.0
margin_right = 924.0
margin_bottom = 437.0
theme = ExtResource( 3 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelLabel" type="Label" parent="."]
margin_right = 500.0
margin_bottom = 29.0
text = "Level 0"
align = 1

[node name="GoalLabel" type="Label" parent="."]
margin_top = 33.0
margin_right = 500.0
margin_bottom = 233.0
rect_min_size = Vector2( 500, 200 )
theme = ExtResource( 3 )
text = "hello world"
align = 1
valign = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountdownLabel" type="Label" parent="."]
margin_top = 237.0
margin_right = 500.0
margin_bottom = 287.0
rect_min_size = Vector2( 50, 50 )
theme = ExtResource( 3 )
text = "3"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutorialLabel" type="Label" parent="."]
margin_top = 291.0
margin_right = 500.0
margin_bottom = 341.0
rect_min_size = Vector2( 50, 50 )
theme = ExtResource( 3 )
text = "3"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountdownTimer" type="Timer" parent="."]

[node name="CountdownSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="StartSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
[connection signal="timeout" from="CountdownTimer" to="." method="_on_CountdownTimer_timeout"]
